--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -72,3 +72,24 @@
     background-color: #9B5DE5
 }
 /* #andu(4c8deeb2f4571930) #css ends  */
+
+    /* #annu(eb092de7c8df0610) #css starts  */
+    .abouteb092de7c8df0610 #AbOuTuS {
+        padding: 3rem;
+        font-weight: bold
+    }
+
+    .abouteb092de7c8df0610 #AbOuTuS .text-custom {
+        color: #0062ff
+    }
+
+    .abouteb092de7c8df0610 #AbOuTuS a {
+        text-decoration: none
+    }
+
+    .abouteb092de7c8df0610 #AbOuTuS .images {
+        height: 80px;
+        width: 80px
+    }
+
+    /* #annu(eb092de7c8df0610) #css ends  */
