--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -313,3 +313,52 @@
 
     }
 /* #segal(d04850298895e70a) #css ends  */
+
+    /* #agdu(d390a380620aac0e) #css starts  */
+    .aboutd390a380620aac0e .video_card {
+        position: relative;
+        border-radius: 5px;
+        overflow: hidden
+    }
+
+    .aboutd390a380620aac0e .video_card::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #f48637;
+        opacity: 0.7
+    }
+
+    .aboutd390a380620aac0e .video_card>img {
+        width: 100%
+    }
+
+    .aboutd390a380620aac0e .video_card>.btn {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 30px;
+        background: #fff;
+        border-radius: 100%;
+        width: 80px;
+        height: 80px;
+        box-shadow: 0px 0px 0px 8px rgba(255, 255, 255, 0.4);
+        border: none;
+        outline: none
+    }
+
+    .aboutd390a380620aac0e .video_card>.btn:hover {
+        box-shadow: 0px 0px 0px 14px rgba(255, 255, 255, 0.5)
+    }
+
+    .aboutd390a380620aac0e .video_card>.btn:active {
+        background: rgba(255, 255, 255, 0.5)
+    }
+    .aboutd390a380620aac0e .marginTop{
+        margin-top: 70px;
+    }
+    /* #agdu(d390a380620aac0e) #css ends  */
