--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -216,6 +216,7 @@
     }
 
     .serviced04850298895e70a .services-block {
+        margin-top: -40px;
         width: 100%
     }
 
@@ -333,6 +334,7 @@
     }
 
     .aboutd390a380620aac0e .video_card>img {
+        border-radius: 1px;
         width: 100%
     }
 
